fixing a probable error on the indesign file
i reckon all “normal” text should have the same size.

(11px is too small, but as i said previously i'm going for a more literal implementation first)

--- a/css/onhb11_tarefona.scss
+++ b/css/onhb11_tarefona.scss
@@ -255,7 +255,7 @@ img {
     }
     .uma-vida-um-evento {
       margin: $m;
-      font-size: 10px;
+      font-size: 11px;
       line-height: 15px;
       columns: 2;
       column-gap: $m;
